reports/introducing_functions.log
Traceback (most recent call last):
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/nbclient/client.py", line 1077, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.8/3.8.6_1/Frameworks/Python.framework/Versions/3.8/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/nbclient/client.py", line 526, in async_execute
    await self.async_execute_cell(
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/nbclient/client.py", line 822, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/mb312/Library/Python/3.8/lib/python/site-packages/nbclient/client.py", line 730, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# The "\n" below means start a new line.
msg = "Great work, Adriana!\n")
msg = msg + "Thanks for your efforts.\n"
print(msg)

msg = "Great work, Billy!\n")
msg = msg + "Thanks for your efforts.\n"
print(msg)

msg = "Great work, Caroline!\n")
msg = msg + "Thanks for your efforts.\n"
print(msg)
------------------

[0;36m  File [0;32m"<ipython-input-4-16bd838824a6>"[0;36m, line [0;32m2[0m
[0;31m    msg = "Great work, Adriana!\n")[0m
[0m                                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unmatched ')'

SyntaxError: unmatched ')' (<ipython-input-4-16bd838824a6>, line 2)

